# app/Http/Controllers/Controller.php
@@ -12,6 +12,15 @@ use Illuminate\Routing\Controller as BaseController;
  *      version="1.0.0",
  *      title="TestTask",
  *      description="TestTask OpenApi description"
+ * ),
+ * @OA\SecurityScheme(
+ *     type="http",
+ *     description="Login with email and password to get the authentication token",
+ *     name="Token based Based",
+ *     in="header",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     securityScheme="bearer",
  * )
  *
  *
